<resources>
    <string name="app_name">xRunner</string>
    <string name="welcome_message">Welcome!</string>
    <string name="out_application_require_firebase_authentication">Out application require Firebase Authentication
    </string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
	<string name="kilometers">Kilometers</string>
	<string name="starting_distance">0.000</string>
	<string name="empty_record">---</string>
	<string name="distance_format">%d.%03d</string>
	<string name="distance_format_3">%s.%s</string>
	<string name="average_speed_format">%.2f</string>
	<string name="minutes_time_format">%02d:%02d</string>
	<string name="hours_time_format">%02d:%02d:%02d</string>
	<string name="pace_format">%d\'%02d\'\'</string>
	<string name="pace_format_2">%s\'%s\'\'</string>
	<string name="start">START</string>
	<string name="init_time">00:00</string>
	<string name="save_snapshot">Save Snapshot</string>
	<string name="saved">Saved!</string>
	<string name="distance">Distance</string>
	<string name="avg_pace">Avg. Pace</string>
	<string name="duration">Duration</string>
	<string name="kilometers_per_hour">km/h</string>
	<string name="heart_rate">Heart Rate</string>
	<string name="sync">Sync…</string>
	<string name="running">Running</string>
	<string name="run_history">Run History</string>
	<string name="cant_load_snapshot">No Internet connection.\nCan\'t load snapshot.</string>
	<string name="name_label">Name:</string>
	<string name="total_distance">distance:</string>
	<string name="total_pace">pace:</string>
	<string name="total_time">time:</string>
	<string name="profile">Profile</string>
	<string name="label_level">LEVEL</string>
	<string name="label_hours">hours</string>
	<string name="label_minutes">minutes</string>
	<string name="challenges">Challenges</string>
	<string name="add_challenge_label">Add Challenge</string>
	<string name="hint_title">title</string>
	<string name="hint_time">time</string>
	<string name="hint_distance">distance</string>
	<string name="hint_speed">avg. speed</string>
	<string name="hint_deadline">deadline</string>
	<string name="submit_label">Submit</string>
	<string name="challenge_deadline_format">MM/dd/yyy</string>
	<string name="title_music">Music</string>
	<string name="title_challenges">Challenges</string>
	<string name="title_history">History</string>
	<string name="title_run">xRunner</string>
	<string name="title_profile">Profile</string>
	<string name="title_summary">Summary</string>
	<string name="challenge_deadline_days_format">%d days left</string>
	<string name="challenge_deadline_day_format">%d day left</string>
	<string name="tab_artists">Artists</string>
	<string name="tab_albums">Albums</string>
	<string name="tab_songs">Songs</string>
	<string name="button_ok">OK</string>
	<string name="button_settings">Settings</string>
	<string name="permission_required_title">Permission required</string>
	<string name="permission_required_info">Permission required</string>
	<string name="permission_music_info">Without storage permission the app is unable to access your music</string>
	<string name="permission_location_info">Without location permission the app is useless</string>
    <string name="no_result">No Result</string>
</resources>
