<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="4dp"
	android:background="@color/colorAccent">
	
	<TextView
		android:id="@+id/tvMonthHeader"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@android:color/white"
		tools:text="Dec 2018"
		app:layout_constraintTop_toTopOf="parent"
		android:gravity="center_horizontal"
		android:textSize="21sp"
		android:textStyle="bold|italic"
		android:layout_marginTop="8dp"
	/>
	
	<TextView
		android:id="@+id/tvMonthDistanceLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/tvMonthHeader"
		app:layout_constraintStart_toStartOf="parent"
		android:textColor="@color/colorFlashGreen"
		android:text="@string/total_distance"
		android:layout_marginStart="8dp"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		android:textSize="16sp"
	/>
	
	<TextView
		android:id="@+id/tvMonthDistance"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/tvMonthHeader"
		app:layout_constraintStart_toEndOf="@id/tvMonthDistanceLabel"
		android:textColor="@color/colorWhite"
		android:layout_margin="4dp"
		tools:text="23.56km"
		android:textSize="16sp"
	/>
	
	<TextView
		android:id="@+id/tvMonthPaceLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/tvMonthPace"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintTop_toBottomOf="@id/tvMonthHeader"
		android:textColor="@color/colorFlashGreen"
		android:text="@string/total_pace"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		android:textSize="16sp"
	/>
	
	<TextView
		android:id="@+id/tvMonthPace"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/tvMonthPaceLabel"
		app:layout_constraintTop_toBottomOf="@id/tvMonthHeader"
		android:textColor="@color/colorWhite"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		android:textSize="16sp"
		tools:text="5'43''"
	/>
	
	<TextView
		android:id="@+id/tvMonthTimeLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/colorFlashGreen"
		app:layout_constraintTop_toBottomOf="@id/tvMonthHeader"
		app:layout_constraintEnd_toStartOf="@id/tvMonthTime"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="4dp"
		android:layout_marginBottom="4dp"
		android:text="@string/total_time"
		android:textSize="16sp"
	/>
	
	<TextView
		android:id="@+id/tvMonthTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvMonthHeader"
		android:layout_marginTop="4dp"
		android:layout_marginStart="4dp"
		android:layout_marginBottom="4dp"
		android:layout_marginEnd="8dp"
		android:textColor="@color/colorWhite"
		tools:text="2h18m"
		android:textSize="16sp"
	/>

</androidx.constraintlayout.widget.ConstraintLayout>