<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:background="@color/colorPrimaryDark"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<ImageView
		android:id="@+id/bLocation"
		android:src="@drawable/ic_location"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:contentDescription="@null"
		android:layout_margin="15dp"
		android:layout_width="28dp"
		android:layout_height="32dp"/>
	
	<TextView
		android:id="@+id/tvDistance"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:textColor="@color/colorWhite"
		android:textStyle="bold|italic"
		android:textSize="120sp"
		android:text="@string/starting_distance"
		android:textAlignment="center"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="2.87"
	/>
	
	<TextView
		android:id="@+id/tvKilometers"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/kilometers"
		android:textAlignment="center"
		android:textColor="@color/colorSecondaryText"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="@id/tvDistance"
		android:textSize="24sp"
		android:textStyle="bold"
	/>
	
	<ImageView
		android:id="@+id/ivPace"
		android:src="@drawable/ic_speedometer"
		app:layout_constraintStart_toStartOf="@id/tvPace"
		app:layout_constraintEnd_toEndOf="@+id/tvPace"
		app:layout_constraintTop_toBottomOf="@id/tvKilometers"
        android:layout_marginTop="48dp"
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:contentDescription="@null"
	/>
	
	<ImageView
		android:id="@+id/ivHeartbeat"
		android:src="@drawable/ic_heartbeat"
		app:layout_constraintStart_toStartOf="@id/tvHeartbeat"
		app:layout_constraintEnd_toEndOf="@+id/tvHeartbeat"
        app:layout_constraintTop_toBottomOf="@id/tvKilometers"
        android:layout_marginTop="48dp"
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:contentDescription="@null"
	/>

	<ImageView
		android:id="@+id/ivTime"
		android:src="@drawable/ic_time"
		app:layout_constraintStart_toStartOf="@id/tvTime"
		app:layout_constraintEnd_toEndOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@id/tvKilometers"
        android:layout_marginTop="48dp"
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:contentDescription="@null"
	/>
	
	<TextView
		android:id="@+id/tvPace"
		android:layout_width="0dp"
		android:text="@string/empty_record"
		tools:text="5'56''"
		android:textSize="28sp"
		android:textColor="@color/colorWhite"
		android:textStyle="bold"
		app:layout_constraintTop_toBottomOf="@id/ivPace"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintWidth_percent="0.333"
		android:layout_marginTop="8dp"
		android:textAlignment="center"
		android:layout_height="wrap_content"/>
	
	<TextView
		android:id="@+id/tvHeartbeat"
		android:layout_width="0dp"
		android:text="@string/empty_record"
		tools:text="166"
		android:textSize="28sp"
		android:textColor="@color/colorWhite"
		android:textStyle="bold"
		app:layout_constraintWidth_percent="0.333"
        app:layout_constraintTop_toBottomOf="@id/ivHeartbeat"
		app:layout_constraintStart_toEndOf="@id/tvPace"
		android:layout_marginTop="8dp"
		android:textAlignment="center"
		android:layout_height="wrap_content"/>
	
	<TextView
		android:id="@+id/tvTime"
		android:layout_width="0dp"
		android:textSize="28sp"
		android:textColor="@color/colorWhite"
		android:textStyle="bold"
		android:text="@string/init_time"
		app:layout_constraintWidth_percent="0.333"
		app:layout_constraintStart_toEndOf="@id/tvHeartbeat"
        app:layout_constraintTop_toBottomOf="@id/ivTime"
        android:layout_marginTop="8dp"
		android:textAlignment="center"
		android:layout_height="wrap_content"/>
	
	<Button
		android:id="@+id/bStartRun"
		android:background="@drawable/circular_layout_white"
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:text="@string/start"
		android:textStyle="bold"
		android:textSize="21sp"
		android:textColor="@color/colorAccent"
		android:fontFamily="sans-serif-smallcaps"
        android:layout_marginBottom="48dp"
		android:contentDescription="@null"
		style="@style/Widget.AppCompat.Button.Borderless"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/musicPlayerContainer"
	/>
	
	<ImageButton
		android:id="@+id/bPauseRun"
		android:src="@drawable/ic_pause"
		android:background="@drawable/circular_layout_white"
		android:layout_width="80dp"
		android:layout_height="80dp"
        android:layout_marginBottom="48dp"
		android:contentDescription="@null"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/musicPlayerContainer"
		android:visibility="gone"
	/>
	
	<androidx.constraintlayout.widget.Guideline
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:id="@+id/guideline_vertical_in_center"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5" />
	
	<ImageButton
		android:id="@+id/bStopRun"
		android:src="@drawable/ic_stop"
		android:background="@drawable/circular_layout_white"
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:layout_marginEnd="10dp"
        android:layout_marginBottom="48dp"
		android:contentDescription="@null"
		app:layout_constraintEnd_toStartOf="@id/guideline_vertical_in_center"
		app:layout_constraintBottom_toTopOf="@id/musicPlayerContainer"
		android:visibility="gone"
	/>
	
	<ImageButton
		android:id="@+id/bResumeRun"
		android:src="@drawable/ic_resume"
		android:background="@drawable/circular_layout_white"
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:layout_marginStart="10dp"
        android:layout_marginBottom="48dp"
		android:contentDescription="@null"
		app:layout_constraintStart_toStartOf="@id/guideline_vertical_in_center"
		app:layout_constraintBottom_toTopOf="@id/musicPlayerContainer"
		android:visibility="gone"
	/>
	
	<com.google.android.gms.maps.MapView
		android:id="@+id/mapView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:visibility="gone"
	/>
	
	<ImageButton
		android:id="@+id/bDismiss"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:src="@drawable/ic_cross"
		android:contentDescription="@null"
		android:background="@drawable/circular_button_black"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginBottom="30dp"
		android:visibility="gone"
	/>

	<FrameLayout
        android:id="@+id/musicPlayerContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
	/>

</androidx.constraintlayout.widget.ConstraintLayout>